finished MVP and stretch with bug fix

--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -49,8 +49,23 @@ button {
     border: solid 2px seagreen;
     background: lightgoldenrodyellow ;
     font-weight: bold;
+    border-radius: 15px;
 }
 
 .title{
     text-align: center;
+}
+
+.delete {
+    margin: 2%;
+}
+
+.Update {
+    width: 80%;
+    margin: auto;
+    border: solid 2px seagreen;
+    background: lightgoldenrodyellow;
+    padding: 2%;
+    border-radius: 15px;
+
 }
